--- a/proxies.yaml
+++ b/proxies.yaml
@@ -1,25 +1,9 @@
 proxies:
-  - name: Vmess United States 2 2023-01-29
+  - name: Vmess Singapore AMP-2 2023-02-07
     server: 104.26.7.171
     port: 80
     type: vmess
-    uuid: 40da35e0-9a28-11ed-b239-205c6d5f5d78
-    alterId: 0
-    cipher: auto
-    tls: false
-    skip-cert-verify: false
-    servername: us-2.0rd.net
-    network: ws
-    ws-opts:
-      path: GET-:ws://104.26.7.171/vmess/kpg3z9nj
-      headers:
-        Host: us-2.0rd.net
-    udp: true
-  - name: Vmess-Singapore-AMP-2-2023-01-27
-    server: 104.26.7.171
-    port: 80
-    type: vmess
-    uuid: cbcc3880-98c0-11ed-b530-205c6d5f5d78
+    uuid: aeb090e0-a126-11ed-b938-205c6d5f5d78
     alterId: 0
     cipher: auto
     tls: false
@@ -27,23 +11,24 @@ proxies:
     servername: sg-7.0rd.net
     network: ws
     ws-opts:
-      path: GET-:ws://104.26.7.171/vmess
+      path: GET-:ws://104.26.7.171/vmess/hjb38szd
       headers:
         Host: sg-7.0rd.net
     udp: true
-  - name: Vmess-Singapore-Melbi-2023-01-26
-    server: 104.26.7.171
+  
+  - name: R80:Vmess Singapore Melbi 3 2023-02-07
+    server: sg-9.0rd.net
     port: 80
     type: vmess
-    uuid: 63438be0-97eb-11ed-b530-205c6d5f5d78
+    uuid: 9be12770-a127-11ed-b333-205c6d5f5d78
     alterId: 0
     cipher: auto
     tls: false
     skip-cert-verify: false
-    servername: sg-4.0rd.net
+    servername: 104.26.7.171
     network: ws
     ws-opts:
-      path: GET-:ws://104.26.7.171/vmess
+      path: GET-:ws://104.26.7.171/vmess/3yxhmafv
       headers:
-        Host: sg-4.0rd.net
+        Host: 104.26.7.171
     udp: true
