--- a/Ilmupedia.yaml
+++ b/Ilmupedia.yaml
@@ -161,6 +161,7 @@ proxy-providers:
 proxy-groups:
   - name: select
     type: select
+    interval: 180
     url: http://connect.rom.miui.com/generate_204
     use:
       - proxies-vmess
@@ -168,19 +169,23 @@ proxy-groups:
       - sshkit
     proxies:
       - DIRECT
-      - LOAD-BALANCE
+      - LOAD-BALANCE-FASTSSH
       - LOAD-BALANCE-SSHKIT
       - LOAD-BALANCE-SSHOCEAN
-      - BEST-PING-LOAD-BALANCE
-  - name: BEST-PING-LOAD-BALANCE
+      - BEST-PING
+  - name: BEST-PING
     type: url-test
     url: http://connect.rom.miui.com/generate_204
-    interval: 300
+    interval: 180
+    use:
+      - proxies-vmess
+      - sshocean
+      - sshkit
     proxies:
       - LOAD-BALANCE-SSHKIT
       - LOAD-BALANCE-SSHOCEAN
       - LOAD-BALANCE
-  - name: LOAD-BALANCE
+  - name: LOAD-BALANCE-FASTSSH
     type: load-balance
     interval: 300
     strategy: consistent-hashing
@@ -201,6 +206,13 @@ proxy-groups:
     url: http://connect.rom.miui.com/generate_204
     use:
       - sshocean
+rule-providers:
+  clash:
+    type: http
+    behavior: domain
+    url: https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/reject.txt
+    path: ./providers/rule-provider_clash.yaml
+    interval: 86400
 rules:
   - SRC-IP-CIDR,192.168.1.201/32,DIRECT
   - MATCH,select
