--- a/Ilmupedia-Load-Balancing+AdBlock.yaml
+++ b/Ilmupedia-Load-Balancing+AdBlock.yaml
@@ -181,6 +181,13 @@ rule-providers:
     url: https://raw.githubusercontent.com/lululoid/Ilmupedia-clash-configuration/main/Adblock+porn-filter.txt
     path: ./providers/adblocker-2+porn.yaml
     interval: 86400
+  whitelist:
+    type: http
+    behavior: domain
+    url: https://raw.githubusercontent.com/lululoid/Ilmupedia-clash-configuration/main/whitelist.txt
+    path: ./providers/adblocker-2+porn.yaml
+    interval: 86400
+
 rules:
   - SRC-IP-CIDR,192.168.1.201/32,DIRECT
   - RULE-SET,adblocker-1,REJECT
