--- a/Ilmupedia-Load-Balancing+AdBlock.yaml
+++ b/Ilmupedia-Load-Balancing+AdBlock.yaml
@@ -192,4 +192,5 @@ rules:
   - SRC-IP-CIDR,192.168.1.201/32,DIRECT
   - RULE-SET,adblocker-1,REJECT
   - RULE-SET,adblocker-2+porn,REJECT
+  - RULE-SET,whitelist,LOAD-BALANCE
   - MATCH,LOAD-BALANCE
