--- a/proxies.yaml
+++ b/proxies.yaml
@@ -1,4 +1,20 @@
 proxies:
+  - name: opentunnel.net-erwinzer0
+    server: 104.26.7.171
+    port: 80
+    type: vmess
+    uuid: a40d34c6-b77c-4648-9210-3e8d2f4226b5
+    alterId: 16
+    cipher: auto
+    tls: false
+    skip-cert-verify: true
+    servername: idv-3.openv2ray.com
+    network: ws
+    ws-opts:
+      path: /u/opentunnel.net-erwinzer0
+      headers:
+        Host: idv-3.openv2ray.com
+    udp: true
   - name: Vmess Singapore Melbi 3 2023-02-14
     server: 104.26.7.171
     port: 80
