--- a/proxies.yaml
+++ b/proxies.yaml
@@ -11,7 +11,7 @@ proxies:
     servername: idv-3.openv2ray.com
     network: ws
     ws-opts:
-      path: GET-:ws://104.26.7.171/vmess/u/opentunnel.net-erwinzer0
+      path: /u/opentunnel.net-erwinzer0
       headers:
         Host: idv-3.openv2ray.com
     udp: true
