--- a/proxies.yaml
+++ b/proxies.yaml
@@ -1,4 +1,20 @@
 proxies:
+  - name: sg-lb.vhax.net-2-14
+    server: 104.26.7.171
+    port: 80
+    type: vmess
+    uuid: 6fea1649-425b-4092-bf53-29792152c925
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: false
+    servername: sg-lb.vhax.net
+    network: ws
+    ws-opts:
+      path: /sshkit/erwinzer0/63e25cfd93227/
+      headers:
+        Host: sg-lb.vhax.net
+    udp: true
   - name: opentunnel.net-erwinzer0-14-2
     server: 104.26.7.171
     port: 80
