--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -1,4 +1,20 @@
 proxies:
+  - name: id-lb.vhax.net-2-16
+    server: 104.26.7.171
+    port: 80
+    type: vmess
+    uuid: 6fea1649-425b-4092-bf53-29792152c925
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: false
+    servername: id-lb.vhax.net
+    network: ws
+    ws-opts:
+      path: /sshkit/erwinzer0/63e3d7c66e3e5/
+      headers:
+        Host: id-lb.vhax.net
+    udp: true
   - name: sg4-v2ray.sshkit.org_2023-02-23
     server: 104.26.7.171
     port: 80
