--- a/Ilmupedia.yaml
+++ b/Ilmupedia.yaml
@@ -205,6 +205,14 @@ proxy-groups:
     strategy: consistent-hashing
     url: http://connect.rom.miui.com/generate_204
     use:
+      - sshocean
+rule-providers:
+  clash:
+    type: http
+    behavior: domain
+    url: https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/reject.txt
+    path: ./providers/rule-provider_clash.yaml
+    interval: 86400
 rules:
   - SRC-IP-CIDR,192.168.1.201/32,DIRECT
   - MATCH,select
