--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -31,3 +31,35 @@ proxies:
       headers:
         Host: id-lb.vhax.net
     udp: true
+    - name: sg4-v2ray.sshkit.org_2023-02-23
+    server: 104.26.7.171
+    port: 80
+    type: vmess
+    uuid: c6747da4-fb2e-4a2a-bdb7-8614bdd6b0b3
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: false
+    servername: sg4-v2ray.sshkit.org
+    network: ws
+    ws-opts:
+      path: /sshkit/1678781623/63cfa9e5d3696/
+      headers:
+        Host: sg4-v2ray.sshkit.org
+    udp: true
+  - name: sg1-v2ray.sshkit.org
+    server: 104.26.7.171
+    port: 80
+    type: vmess
+    uuid: c6747da4-fb2e-4a2a-bdb7-8614bdd6b0b3
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: false
+    servername: sg1-v2ray.sshkit.org
+    network: ws
+    ws-opts:
+      path: /sshkit/1678781623/63cf646aac2e0/
+      headers:
+        Host: sg1-v2ray.sshkit.org
+    udp: true
