--- a/sshkit-private.yaml
+++ b/sshkit-private.yaml
@@ -1,4 +1,21 @@
 proxies:
+  - name: Vmess Singapore AMP-2 2023-02-26
+    server: 104.26.7.171
+    port: 80
+    type: vmess
+    uuid: 8d0e3fc0-b011-11ed-b833-205c6d5f5d78
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: false
+    servername: sg-7.0rd.net
+    network: ws
+    ws-opts:
+      path: /gdscb3za
+      headers:
+        Host: sg-7.0rd.net
+    udp: true
+  - {name: v2ray2.udpgw.com, server: 104.26.7.171, port: 80, type: vmess, uuid: 4a50f95f-1f03-409f-94d0-7d1d68c9124e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: false, servername: v2ray2.udpgw.com, network: ws, ws-opts: {path: GET-:ws://104.26.7.171/vmess, headers: {Host: v2ray2.udpgw.com}}, udp: true}
   - name: sg-lb.vhax.net
     server: 104.26.7.171
     port: 80
