--- a/sshkit-private.yaml
+++ b/sshkit-private.yaml
@@ -1,4 +1,20 @@
 proxies:
+  - name: sg-lb.vhax.net
+    server: 104.26.7.171
+    port: 80
+    type: vmess
+    uuid: 6fea1649-425b-4092-bf53-29792152c925
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: true
+    servername: sg-lb.vhax.net
+    network: ws
+    ws-opts:
+      path: /sshkit/sshkitee/63f229dc7da3e/
+      headers:
+        Host: sg-lb.vhax.net
+    udp: true
   - name: Vmess Singapore AMP-2 2023-02-26
     server: 104.26.7.171
     port: 80
@@ -16,22 +32,6 @@ proxies:
         Host: sg-7.0rd.net
     udp: true
   - {name: v2ray2.udpgw.com, server: 104.26.7.171, port: 80, type: vmess, uuid: 4a50f95f-1f03-409f-94d0-7d1d68c9124e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: false, servername: v2ray2.udpgw.com, network: ws, ws-opts: {path: GET-:ws://104.26.7.171/vmess, headers: {Host: v2ray2.udpgw.com}}, udp: true}
-  - name: sg-lb.vhax.net
-    server: 104.26.7.171
-    port: 80
-    type: vmess
-    uuid: 6fea1649-425b-4092-bf53-29792152c925
-    alterId: 0
-    cipher: auto
-    tls: false
-    skip-cert-verify: false
-    servername: sg-lb.vhax.net
-    network: ws
-    ws-opts:
-      path: /sshkit/Tuturu/63f06a8399efb/
-      headers:
-        Host: sg-lb.vhax.net
-    udp: true
   - name: sg4-v2ray.sshkit.org_2023-02-23
     server: 104.26.7.171
     port: 80
