indent error gix

--- a/Ilmupedia.yaml
+++ b/Ilmupedia.yaml
@@ -146,10 +146,11 @@ proxy-groups:
     use:
       - sshkit
     proxies:                                                     - DIRECT
-      - LOAD-BALANCE-SSHKIT
-      - BEST-PING                                            - name: BEST-PING
+      - BEST-PING 
+  - name: BEST-PING
     type: url-test
-    url: http://connect.rom.miui.com/generate_204              interval: 180
+    url: http://connect.rom.miui.com/generate_204       
+    interval: 180
     use:
       - sshkit
 rules:
