--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -1,4 +1,36 @@
 proxies:
+  - name: sshocean-sheheh
+    server: 104.26.7.171
+    port: 80
+    type: vmess
+    uuid: cd21d052-6bbe-47db-8551-f1205c1b30dd
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: false
+    servername: sg3.v2rayserv.com
+    network: ws
+    ws-opts:
+      path: GET-:ws://104.26.7.171/vmess
+      headers:
+        Host: sg3.v2rayserv.com
+    udp: true
+  - name: sshocean-erwin1
+    server: 104.26.7.171
+    port: 80
+    type: vmess
+    uuid: 1a9dd491-3717-4844-91f0-c8e7d25ee04f
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: false
+    servername: sg1-mlb.v2rayserv.com
+    network: ws
+    ws-opts:
+      path: GET-:ws://104.26.7.171/vmess
+      headers:
+        Host: sg1-mlb.v2rayserv.com
+    udp: true
   - name: Vmess Singapore AMP-2 2023-03-15
     server: 104.26.7.171
     port: 80
