--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -1,19 +1,19 @@
 proxies:
-  - name: Vmess Indonesia Herza Limit 2023-03-19
-    server: 104.22.25.131 
+  - name: sg-lb.vhax.net
+    server: 104.22.25.131
     port: 80
     type: vmess
-    uuid: 894fc0d0-c3f1-11ed-b537-205c6d5f5d78
+    uuid: 6fea1649-425b-4092-bf53-29792152c925
     alterId: 0
     cipher: auto
     tls: false
-    skip-cert-verify: false 
-    servername: id-1.0rd.net
+    skip-cert-verify: true 
+    servername: sg-lb.vhax.net
     network: ws
     ws-opts:
-      path: /bidu5gtq
+      path: /sshkit/Goodboi/641a3427477e0/
       headers:
-        Host: id-1.0rd.net
+        Host: sg-lb.vhax.net
     udp: true
   - name: Vmess Singapore HE-1 2023-03-23
     server: 104.22.25.131
