--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -1,9 +1,10 @@
 proxies:
-  - name: Vmess Indonesia Herza Limit 2023-03-28
+  proxies:
+  - name: Vmess Indonesia Herza Limit 2023-03-29
     server: 104.22.25.131
     port: 80
     type: vmess
-    uuid: 30b6a730-caba-11ed-b530-205c6d5f5d78
+    uuid: 5e6b0fc0-cbc9-11ed-b736-205c6d5f5d78
     alterId: 0
     cipher: auto
     tls: false
@@ -11,7 +12,7 @@ proxies:
     servername: id-1.0rd.net
     network: ws
     ws-opts:
-      path: /fmwq2sve
+      path: /azx9f60m
       headers:
         Host: id-1.0rd.net
     udp: true
