--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -1,4 +1,20 @@
 proxies:
+  - name: sg-lb.vhax.net
+    server: 104.22.25.131
+    port: 80
+    type: vmess
+    uuid: 6fea1649-425b-4092-bf53-29792152c925
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: false
+    servername: sg-lb.vhax.net
+    network: ws
+    ws-opts:
+      path: /sshkit/Uhuie/643b80dc5ac7b/
+      headers:
+        Host: sg-lb.vhax.net
+    udp: true
   - name: Vmess Singapore HE-1 2023-04-21
     server: 104.22.25.131
     port: 80
