--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -1,4 +1,20 @@
 proxies:
+  - name: sg4-v2ray.sshkit.org 17 Mei
+    server: 104.22.25.131
+    port: 80
+    type: vmess
+    uuid: c6747da4-fb2e-4a2a-bdb7-8614bdd6b0b3
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: false
+    servername: sg4-v2ray.sshkit.org
+    network: ws
+    ws-opts:
+      path: /sshkit/1678781623/643d04d234a51/
+      headers:
+        Host: sg4-v2ray.sshkit.org
+    udp: true
   - name: sg-lb.vhax.net
     server: 104.22.25.131
     port: 80
